# Marciplier

./: .gitignore  README.md  pyproject.toml
marciplier/: analyze_marc_records.py  benchmark.py  conversion_strategy.py  converter.py  example.py  main.py  marc_handler.py  marc_record.py  utils.py
marciplier/converters/: json_to_records.py  marc_json.py  marc_xml.py  marcxml_to_records.py  records_to_json.py  records_to_marcxml.py  records_to_readable_json.py
