[tool.poetry]
name = "marciplier"
version = "0.1.0"
description = ""
authors = ["havardox <harald.varner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.1"
py7zr = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
